--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'android'
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:support-v4:19.0.+'
     compile 'com.nostra13.universalimageloader:universal-image-loader:+'
     compile project(':library')
 }
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '19.0.3'
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         minSdkVersion 8
